--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
              <section>
                      <div>
                          <h1>Melhores Momentos f1</h1>
-                         <p1>1Titulo</p1>
+                         <p1>7 TEMPORADAS!!!</p1>
                     </div>
                     <div>
                         <p>2024</p>
